syntax = "proto3";

package usercenter;
option go_package="./usercenter";

message UserInfo {
  string name = 1;
  string email = 2;
}

message GetAccessTokenRequest {
  string email = 1;
  string password = 2;
}

message GetAccessTokenResponse {
  int64 id = 1;
  int64 expire = 2;
  string name = 3;
  string token = 4;
  string reftoken = 5;
}

message GetUserByIDRequest{
  int64 id = 1;
}

message GetUserByIdResponse{
  UserInfo info = 1;
}

message RegisterRequest{
  string name = 1;
  string email = 2;
  string password = 3;
}

message RegisterResponse{
  int64 id = 1;
  string name = 2;
  int64 expire = 3;
  string token = 4;
  string reftoken = 5;
}

message RefreshRequest{
  string reftoken = 1;
}

message RefreshResponse{
  int64 id = 1;
  string name = 2;
  int64 expire = 3;
  string token = 4;
  string reftoken = 5;
}

service UserCenter {
  // 登录验证
  rpc GetAccessToken(GetAccessTokenRequest) returns(GetAccessTokenResponse);

  // 注册
  rpc RegisterUser(RegisterRequest) returns(RegisterResponse);

  // 刷新Token
  rpc Refresh(RefreshRequest) returns(RefreshResponse);

  // 根据ID获取信息
  rpc GetUserByID(GetUserByIDRequest) returns(GetUserByIdResponse);
}
